Changing tab title from Lyceum to Bantopia.

--- a/Lyceum/templates/comms/chat.html
+++ b/Lyceum/templates/comms/chat.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-    <title>The Lyceum - Why DreamWorks 100x better than Disney</title>
+    <title>The Lyceum - {{post.post_title}}</title>
 </head>
 <body>
     <div class="sidebar">
@@ -67,7 +67,11 @@
             </div>
             <div class="level mobile-header">
                 <a href="">
-                    <h2><span class="type">Declaration:</span> DreamWorks is 100x better than Disney</h2>
+                    {% if post.post_type == 'DE' %}
+                    <h2><span class="type">Declaration:</span> {{post.post_title}}</h2>
+                    {% elif post.post_type == 'TH' %}
+                    <h2><span class="type">Theory:</span> {{post.post_title}}</h2>
+                    {% endif %}
                 </a>
             </div>
         </div>
