Changed the place dvh was being overriden on mobile.

--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -1067,7 +1067,7 @@ input:focus:-ms-input-placeholder {
 
     .content {
         order: 0;
-        height: 100vh;
+        height: 100dvh;
         justify-content: space-between;
     }
 
