--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -126,13 +126,12 @@ input:focus:-ms-input-placeholder {
 }*/
 
 .logo {
-    margin-right: auto;
+    margin-right: 20px;
 }
 
 .logo img{
     flex: 1;
-    width: 50px;
-    margin-top: 4px;
+    width: 60px;
     margin-left: 5vw;
 }
 
@@ -802,7 +801,7 @@ input:focus:-ms-input-placeholder {
 
 @media only screen and (max-width: 740px) {
     .logo img {
-        width: 7vw;
+        width: 13vw;
     }
 
     .navbar form input {
@@ -855,6 +854,7 @@ input:focus:-ms-input-placeholder {
     .content {
         order: 0;
         height: 100vh;
+        height: 100dvh; /* For compatibility? */
     }
 
     .navbar-container {
@@ -900,6 +900,7 @@ input:focus:-ms-input-placeholder {
     }
 
     .sort {
+        height: 65px;
         -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
         -moz-box-sizing: border-box;    /* Firefox, other Gecko */
         box-sizing: border-box;         /* Opera/IE 8+ */
@@ -910,6 +911,7 @@ input:focus:-ms-input-placeholder {
         justify-content: center;
         font-size: 5vw;
         font-weight: 600;
+        padding: 10px 0px 10px 0px;
     }
 
     .sort a:hover {
@@ -944,6 +946,7 @@ input:focus:-ms-input-placeholder {
     .middle {
         width: 100%;
         flex: 1;
+        min-height: 0;
         margin: 0;
     }
 
@@ -959,6 +962,7 @@ input:focus:-ms-input-placeholder {
         margin: 0;
         border-radius: 0;
         border: none;
+        border-top: 3px solid #F28500;
         border-bottom: 3px solid #F28500;
         box-shadow: none;
     }
@@ -994,6 +998,10 @@ input:focus:-ms-input-placeholder {
 
     .post h4 {
         font-size: 3.8vw;
+    }
+
+    .post-label {
+        display: none;
     }
 
     .bottom {
@@ -1055,228 +1063,6 @@ input:focus:-ms-input-placeholder {
         font-weight: 700;
         font-size: 24px;
         color: #000;
-    }
-}
-
-@media only screen and (max-width: 620px) {
-    body {
-        display: flex;
-        flex-direction: column;
-        height: 100%;
-    }
-
-    .content {
-        order: 0;
-        height: 100vh;
-        justify-content: space-between;
-    }
-
-    .navbar-container {
-        display: none;
-    }
-
-    .navbar {
-        margin: 0;
-        height: auto;
-    }
-        
-    .index-mobile-navbar {
-        display: none;
-        align-items: center;
-        font-family: 'Roboto', sans-serif;
-    }
-
-    .index-mobile-navbar {
-        align-self: center;
-        justify-content: center;
-        margin: 0px 0px 0px 0px;
-        overflow: visible;
-        background-color: white;
-    }
-    
-    .index-mobile-navbar form {
-        width: 100%;
-    }
-    
-    .index-mobile-navbar form input {
-        color: #F28500;
-        caret-color: #000;
-        text-align: center;
-        display: flex;
-        justify-content: center;
-        border: none;
-        font-family: "Poppins", sans-serif;
-        font-size: 5vw;
-        width: 100%;
-        font-weight: 600;
-    }
-    
-    .index-mobile-navbar form input:focus {
-        outline-width: 0;
-        
-    }
-
-    .navbar form{
-        width: 20px;
-    }
-
-    .content {
-        margin-top: 0;
-    }
-
-    .account-links {
-        display: none;
-    }
-
-    .logo {
-        align-items: center;
-        width: 50%;
-        margin: 2vw auto 20px auto;
-    }
-
-    .logo img {
-        display: flex;
-        margin: auto;
-        width: 9vw;
-    }
-
-    .sort {
-        flex: 1;
-    }
-
-    .sort {
-        height: 65px;
-        -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-        -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-        box-sizing: border-box;         /* Opera/IE 8+ */
-    }
-
-    .sort a {
-        display: flex;
-        justify-content: center;
-        font-size: 5vw;
-        font-weight: 600;
-        padding: 10px 0px 10px 0px;
-    }
-    
-    .sort .post-link {
-        font-size: 5vw;
-    }
-    
-    .sort a:hover {
-        color: #000;
-    }
-
-    .sort .post-link:hover {
-        color: #000;
-    }
-
-    .navline {
-        display: none;
-    }
-
-    .middle {
-        width: 100%;
-        min-height: 0;
-        margin: 0;
-    }
-
-    .left {
-        margin: 0;
-    }
-
-    .post {
-        margin: 0;
-        border-radius: 0;
-        border: none;
-        border-bottom: 3px solid #F28500;
-    }
-
-    .post h1{
-        font-family: 'Poppins', sans-serif;
-        font-size: 8vw;
-        color: black;
-        padding: 15px 20px 0px 20px;
-    }
-
-    .post h1 span {
-        box-shadow: inset 0 -4vw 0 #F28500;
-    }
-
-    .post-bar {
-        align-items: center;
-    }
-
-    .post-bar h3 {
-        margin-left: auto;
-        font-size: 4vw;
-        font-family: 'Poppins', sans-serif;
-        color: black;
-    }
-
-    .post h2{
-        font-family: 'Poppins', sans-serif;
-        font-size: 4vw;
-        color: black;
-        margin: 0px 20px 5px 20px;
-    }
-
-    .post h4 {
-        font-size: 3.8vw;
-    }
-
-    .bottom {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-
-    .bottom {
-        border-top: 5px solid #000;
-        background-color: #000;
-    }
-
-    .bottom {
-        height: 60px;
-        -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
-        -moz-box-sizing: border-box;    /* Firefox, other Gecko */
-        box-sizing: border-box;         /* Opera/IE 8+ */
-    }
-
-    .new-user-links {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        gap: 5px;
-    }
-
-    .new-user-links a {
-        flex: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100%;
-    }
-
-    .new-user-links a {
-        font-family: 'Poppins', sans-serif;
-        font-size: 5vw;
-        font-weight: 600;
-        text-decoration: none;
-        background-color: white;
-    }
-
-    .mobile-create-profile-btn {
-        color: #00baf2;
-    }
-
-    .mobile-login-btn {
-        color: #F28500;
     }
 }
 
