--- a/Lyceum/static/styles/post.css
+++ b/Lyceum/static/styles/post.css
@@ -773,7 +773,9 @@ input:focus:-ms-input-placeholder {
         font-size: 3vh;
     }
 
-    .mobile-bottom input {
+    .mobile-bottom input, 
+    .post-input textarea,
+    .post-input input  {
         appearance: none;
         -webkit-appearance: none;
         border-radius: 0;
