--- a/Lyceum/templates/post/drafts.html
+++ b/Lyceum/templates/post/drafts.html
@@ -47,7 +47,7 @@
                                 {% endif %}
                             </div>
                             <div class="draft-description">
-                                <p>{{ draft.draft_desc }}</p>
+                                <p>{{ draft.draft_desc|linebreaksbr }}</p>
                             </div>
                             <div class="draft-tags">
                                 <h1><span>Tags:</span>{{ draft.draft_tags }}</h1>
