--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -132,7 +132,7 @@ input:focus:-ms-input-placeholder {
 .logo img{
     flex: 1;
     width: 60px;
-    margin-left: 5vw;
+    margin-left: 5.5vw;
 }
 
 .navline {
@@ -389,7 +389,7 @@ input:focus:-ms-input-placeholder {
     color: black;
     font-weight: 600;
     width: 100%;
-    border-bottom: 4px solid #f28500;
+    border-bottom: 4px solid #f2850068;
     padding-bottom: 1vw;
 }
 
@@ -434,12 +434,12 @@ input:focus:-ms-input-placeholder {
 
 .watchlist li {
     box-sizing: border-box;
-    padding: 5px 10px;
+    padding: 7.5px 10px;
     font-family: 'Poppins', sans-serif;
     font-size: 1.2vw;
     color: black;
     font-weight: 500;
-    border-bottom: 4px solid #f28500;
+    border-bottom: 4px solid #f2850068;
     width: 100%;
 }
 
@@ -471,11 +471,15 @@ input:focus:-ms-input-placeholder {
 }
 
 .DE-shadow-watchlist {
-    box-shadow: inset 0 -9px 0 #F28500;
+    box-shadow: inset 0 -0.5vw 0 #F28500;
 }
 
 .TH-shadow-watchlist {
-    box-shadow: inset 0 -9px 0 #30f200;
+    box-shadow: inset 0 -0.5vw 0 #30f200;
+}
+
+.watchlist-bold {
+    font-weight: 600;
 }
 
 .sort {
