--- a/Lyceum/templates/profile/dashboard.html
+++ b/Lyceum/templates/profile/dashboard.html
@@ -180,7 +180,7 @@
                         <h1>Watchlist Activity</h1>
                     </div>
                     <div class="dashboard-watchlist">
-                        {% if watchlist_activit %}
+                        {% if watchlist_activity %}
                             {% for activity, timeframe in watchlist_activity %}
                                 {% if activity.watchlist_activity_type == 'ACTIVE' %}
                                 <div class="dashboard-activity">
