--- a/Lyceum/static/styles/profile.css
+++ b/Lyceum/static/styles/profile.css
@@ -308,6 +308,7 @@ button[type="submit"]:hover > span {
 .dashboard-container {
     width: 100%;
     height: 100vh;
+    height: 100dvh;
     display: flex;
     flex-direction: column;
     background-color: #f28500;
