--- a/Lyceum/templates/post/write.html
+++ b/Lyceum/templates/post/write.html
@@ -13,6 +13,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.svg' %}" sizes="196x196">
     <title>Bantopia - Post Something</title>
 </head>
 <body>
@@ -95,11 +96,11 @@
                     </div>
                     <div class="mobile-bottom">
                         <div class="mobile-bottom-layer-1">
-                            <a class="delete-btn-mobile"><input type="submit" name="delete" id="delete" value="Delete"></a>
-                            <a class="draft-btn-mobile"><input type="submit" name="draft" id="draft" value="Draft"></a>
+                            <a class="delete-btn-mobile"><input type="submit" name="delete-btn" id="delete" value="Delete"></a>
+                            <a class="draft-btn-mobile"><input type="submit" name="draft-btn" id="draft" value="Draft"></a>
                         </div>
                         <div class="mobile-bottom-layer-2">
-                            <a class="post-btn-mobile"><input type="submit" name="post" id="post" value="Post"></a>
+                            <a class="post-btn-mobile"><input type="submit" name="post-btn" id="post" value="Post"></a>
                         </div>
                     </div>
                 </div>
