--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -978,8 +978,12 @@ input:focus:-ms-input-placeholder {
         padding: 15px 20px 0px 20px;
     }
 
-    .post h1 span {
-        box-shadow: inset 0 -4vw 0 #F28500;
+    .post-title-de {
+        box-shadow: inset 0 -4vw 0 #f28500;
+    }
+
+    .post-title-th {
+        box-shadow: inset 0 -4vw 0 #30f200;
     }
 
     .post-bar {
