--- a/Lyceum/static/styles/comm.css
+++ b/Lyceum/static/styles/comm.css
@@ -222,9 +222,16 @@ sup {
     color: #000;
 }
 
-.header span,
-.mobile-header span {
+.header span {
     box-shadow: inset 0 -14px 0 #F28500;
+}
+
+.mobile-header-shadow-de {
+    box-shadow: inset 0 -8px 0 #F28500;
+}
+
+.mobile-header-shadow-th {
+    box-shadow: inset 0 -8px 0 #30f200;
 }
 
 .chat {
@@ -1207,8 +1214,12 @@ input:focus:-ms-input-placeholder {
         text-align: center;
     }
 
-    .mobile-header span {
+    .mobile-header-shadow-de {
         box-shadow: inset 0 -8px 0 #F28500;
+    }
+
+    .mobile-header-shadow-th {
+        box-shadow: inset 0 -8px 0 #30f200;
     }
 
     .message {
