--- a/Lyceum/static/styles/profile.css
+++ b/Lyceum/static/styles/profile.css
@@ -17,35 +17,38 @@ body {
 
 /* width */
 ::-webkit-scrollbar {
-    width: 4px;
+    display: none;
 }
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: none;
+    display: none;
 }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #ececec;
-    border-radius: 10px;
+    display: none;
 }
 
 .create-container {
     width: 100vw;
     height: 100vh;
+    border: 8px solid #f28500;
+    box-sizing: border-box;
 }
 
 .create-container form {
     display: flex;
+    flex-direction: column;
     width: 100vw;
-    height: 100vh;
+    height: 100%;
+    overflow: hidden;
 }
 
 .content {
     display: flex;
     flex-direction: column;
-    width: 60%;
+    width: 100vw;
     height: 100vh;
 }
 
@@ -93,15 +96,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5vh;
     margin-top: auto;
     margin-bottom: auto;
+    width: 40%;
 }
 
 .create-field-area .input-field {
     display: flex;
     flex-direction: column;
+    align-items: center;
     flex: 1;
+    margin: 2.5vh 0;
+    width: 100%;
 }
 
 .create-field-area .input-field input {
@@ -110,8 +116,8 @@ body {
     -moz-appearance: none;
     border-radius: 0;
     border: none;
-    width: 525px;
-    border-bottom: 4px solid #00baf279;
+    width: 100%;
+    border-bottom: 5px solid #F28500;
     background-color: transparent;
     padding: 2px;
 }
@@ -121,7 +127,7 @@ body {
 }
 
 .create-field-area .input-field input:focus {
-    border-bottom: 4px solid #f28500;
+    border-bottom: 8px solid #f28500;
 }
 
 .create-field-area .input-field input:focus ~ label span {
@@ -156,14 +162,10 @@ body {
 }
 
 .create-button-container {
-    width: 40%;
-}
-
-.form-area h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 36px;
-    font-weight: 700;
-    box-shadow: inset 0 -15px 0 #F28500;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .login-field-area {
@@ -243,8 +245,8 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    height: 100%;
+    box-sizing: border-box;
+    padding: 10px;
 }
 
 .login-and-create-button {
@@ -252,11 +254,12 @@ body {
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
     letter-spacing: 2px;
+    width: 100%;
 }
 
 .login-and-create-button {
     border: none;
-    border-left: 6px solid #F28500;
+    border-top: 8px solid #F28500;
     background-color: white;
 }
 
@@ -287,14 +290,30 @@ button[type="submit"]:hover > span {
 }
 */
 
-.big-text {
+.big-text-top {
     position: absolute;
-    font-size: 500px;
-    top: 50%;
-    transform: translateY(-50%) translateX(-50%);
+    top: 0%;
+    transform: translateX(-50%);
     left: 50%;
     z-index: -100;
-    color: #00baf277;
+    color: #f2850077;
+    white-space: nowrap;
+}
+
+.big-text-bottom {
+    position: absolute;
+    bottom: 0%;
+    transform: translateX(-50%);
+    left: 50%;
+    z-index: -100;
+    color: #f2850077;
+    white-space: nowrap;
+}
+
+.big-text-top,
+.big-text-bottom {
+    font-family: 'Poppins',sans-serif;
+    font-size: 40px;
 }
 
 
@@ -971,6 +990,12 @@ button[type="submit"]:hover > span {
 }
 
 @media only screen and (max-width: 960px) {
+    body {
+        overflow-y: hidden;
+        height: 100vh;
+        height: 100dvh;
+    }
+
     .back-header {
         position: fixed;
         padding: 2vh 0 0 6vw;
@@ -1044,6 +1069,12 @@ button[type="submit"]:hover > span {
         letter-spacing: normal;
         font-size: 7vw;
     }
+
+    .big-text-top,
+    .big-text-bottom {
+        font-family: 'Poppins',sans-serif;
+        font-size: 5vw;
+    }
 }
 
 @media only screen and (max-width: 1380px) {
@@ -1060,11 +1091,7 @@ button[type="submit"]:hover > span {
     .create-container {
         height: 100vh;
         height: 100dvh;
-    }
-
-    .create-container form {
-        height: 100vh;
-        height: 100dvh;
+        overflow: hidden;
     }
 
     .create-field-area {
@@ -1082,8 +1109,7 @@ button[type="submit"]:hover > span {
     .create-button-container {
         display: flex;
         width: 100%;
-        height: 15vw;
-        border-top: 2px solid #F28500;
+        border-top: 8px solid #F28500;
     }
 
     .create-button-container button {
@@ -1091,7 +1117,6 @@ button[type="submit"]:hover > span {
         width: 100%;
         height: 100%;
         border: none;
-        border-top: 2px solid #F28500;
         font-style: normal;
         color: #000;
     }
