--- a/Lyceum/templates/comms/dogs.html
+++ b/Lyceum/templates/comms/dogs.html
@@ -72,9 +72,9 @@
             <div class="level mobile-header">
                 <a href="">
                     {% if post.post_type == 'DE' %}
-                    <h2><span class="type">Declaration:</span> {{post.post_title}}</h2>
+                    <h2><span class="mobile-header-shadow-de">Declaration:</span> {{post.post_title}}</h2>
                     {% elif post.post_type == 'TH' %}
-                    <h2><span class="type">Theory:</span> {{post.post_title}}</h2>
+                    <h2><span class="mobile-header-shadow-th">Theory:</span> {{post.post_title}}</h2>
                     {% endif %}
                 </a>
             </div>
