--- a/Lyceum/templates/profile/create.html
+++ b/Lyceum/templates/profile/create.html
@@ -15,7 +15,6 @@
 </head>
 <body>
     <div class="create-container">
-        <!--<h1 class="big-text">Create</h1>--->
         <form method="post">
             {% csrf_token %}
             <div class="content">
@@ -23,14 +22,11 @@
                     <a href="/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 73.4-73.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-128 128z"/></svg></a>
                 </div>
                 <div class="form-area">
+                    <h1 class="big-text-bottom">Create a private, humble profile.</h1>
                     <div class="create-field-area">
                         <div class="input-field">
                             <input type="text" id="create-name" name="create-name" autocomplete="off">
                             <label for="create-name"><span class="input-your">Your</span> Display Name</label>
-                        </div>
-                        <div class="input-field">
-                            <input type="text" id="create-email" name="create-email" autocomplete="off">
-                            <label for="create-email"><span class="input-your">Your</span> Email</label>
                         </div>
                         <div class="input-field">
                             <input type="password" id="create-password" name="create-password" autocomplete="off">
@@ -48,7 +44,7 @@
             </div>    
             <div class="create-button-container">
                 <button type="submit" class="login-and-create-button" id="create-submit" value="Create your profile">
-                    <span id="create-text"><span class="profile-submit-tags">{</span>Click to Create<span class="profile-submit-tags">}</span></span>
+                    <span id="create-text"><span class="profile-submit-tags">{</span>Chaos awaits...<span class="profile-submit-tags">}</span></span>
                 </button>
             </div>
         </form>
