--- a/Lyceum/static/styles/index.css
+++ b/Lyceum/static/styles/index.css
@@ -15,6 +15,7 @@ body {
     flex-direction: column;
     background-color: #ffffff;
     height: 100vh;
+    box-sizing: border-box;
 }
 
 /* width */
@@ -255,6 +256,7 @@ input:focus:-ms-input-placeholder {
     text-decoration: none;
     cursor: pointer;
     border: 5px solid #f28500;
+    border-left: 15px solid #f28500;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1);
 }
 
