--- a/Lyceum/templates/profile/create.html
+++ b/Lyceum/templates/profile/create.html
@@ -11,40 +11,59 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.svg' %}" sizes="196x196">
-    <title>Bantopia - Create Profile</title>
+    <title>Create your Profile - Bantopia</title>
 </head>
 <body>
     <div class="create-container">
+        <div class="create-title">
+            <h1>Create a quick profile, or <a href="/login/">log in</a></h1>
+        </div>
+        <div class="messages" id="messages-container">
+            <div class="message">
+                <div class="message-body">
+                    <div class="text">
+                        <div class="author"><span class="author-shadow-OR">derek2887</span></div>
+                        <div class="message-content neutral"><span class="message-tag leading-tag dislikable-excited color-OR">{</span><span class="message-actual-content">Choas reigns...</span><span class="message-tag trailing-tag likable-excited color-OR">}</span><sup>-8</sup></div>
+                    </div>
+                </div>
+            </div>
+            <div class="message">
+                <div class="message-body">
+                    <div class="text">
+                        <div class="author"><span class="author-shadow-OR">samspam</span></div>
+                        <div class="message-content neutral"><span class="message-tag leading-tag dislikable-excited color-OR">{</span><span class="message-actual-content">Oh gosh, derek's gettting metephoric again.</span><span class="message-tag trailing-tag likable-excited color-OR">}</span><sup>23</sup></div>
+                    </div>
+                </div>
+            </div>
+        </div>
         <form method="post">
             {% csrf_token %}
             <div class="content">
-                <div class="back-header">
-                    <a href="/"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 73.4-73.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-128 128z"/></svg></a>
-                </div>
                 <div class="form-area">
-                    <h1 class="big-text-bottom">Create a private, humble profile.</h1>
                     <div class="create-field-area">
                         <div class="input-field">
-                            <input type="text" id="create-name" name="create-name" autocomplete="off">
-                            <label for="create-name"><span class="input-your">Your</span> Display Name</label>
+                            <input type="text" id="create-name" name="create-name" autocomplete="off" placeholder="Display Name">
                         </div>
                         <div class="input-field">
-                            <input type="password" id="create-password" name="create-password" autocomplete="off">
-                            <label for="create-password"><span class="input-your">Your</span> Password</label>
+                            <input type="password" id="create-password" name="create-password" autocomplete="off" placeholder="Password">
                         </div>
                         <div class="input-field">
-                            <input type="password" id="create-confirm" name="create-confirm-password" autocomplete="off">
-                            <label for="create-confirm">Confirm <span class="input-your">Your</span> Password</label>
+                            <input type="password" id="create-confirm" name="create-confirm-password" autocomplete="off" placeholder="Confirm Password">
                         </div>
                     </div>
                     {% if message %}
-                    <div class="error-message"><p>{{message}}</p></div>
+                    <div class="create-support-message"><p>{{ message }}</p></div>
+                    {% else %}
+                    <div class="create-support-message"><p>{{ message }}</p></div>
                     {% endif %}
+                <!--
+                    <div class="create-support-message"><p>Email support@bantopia.com if you need <u>any help whatsoever</u>, we'll try our best.</p></div>
+                -->
                 </div>
             </div>    
             <div class="create-button-container">
-                <button type="submit" class="login-and-create-button" id="create-submit" value="Create your profile">
-                    <span id="create-text"><span class="profile-submit-tags">{</span>Chaos awaits...<span class="profile-submit-tags">}</span></span>
+                <button type="submit" class="create-button" id="create-submit" value="Create your profile">
+                    <span id="create-text">Click here to join the utter chaos!</span>
                 </button>
             </div>
         </form>
