--- a/Lyceum/templates/profile/logIn.html
+++ b/Lyceum/templates/profile/logIn.html
@@ -15,31 +15,31 @@
 </head>
 <body>
     <div class="login-container">
+        <div class="login-title">
+            <h1>Log in, or <a href="/create-profile/">create a quick profile</a></h1>
+        </div>
         <form method="POST">
             {% csrf_token %}
             <div class="content">
-                <div class="back-header">
-                    <a href="/"><svg href="../index.html" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M9.4 233.4c-12.5 12.5-12.5 32.8 0 45.3l128 128c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L109.3 288 480 288c17.7 0 32-14.3 32-32s-14.3-32-32-32l-370.7 0 73.4-73.4c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0l-128 128z"/></svg></a>
-                </div>
                 <div class="form-area">
                     <div class="login-field-area">
                         <div class="input-field">
-                            <input type="text" id="login-name" name="login-name" autocomplete="off">
-                            <label for="login-name"><span class="input-your">Your</span> Display Name</label>
+                            <input type="text" id="login-name" name="login-name" autocomplete="off" placeholder="Your Display Name">
                         </div>
                         <div class="input-field">
-                            <input type="password" id="login-password" name="login-password" autocomplete="off">
-                            <label for="login-password" id="login-password" name="login-password"><span class="input-your">Your</span> Password</label>
+                            <input type="password" id="login-password" name="login-password" autocomplete="off" placeholder="Your Password">
                         </div>
                     </div>
                     {% if message %}
-                    <div class="error-message"><p>{{message}}</p></div>
+                    <div class="login-support-message"><p>{{ message }}</p></div>
+                    {% else %}
+                    <div class="login-support-message"><p>{{ message }}</p></div>
                     {% endif %}
                 </div>
             </div>
             <div class="login-button-container">
-                <button type="submit" class="login-and-create-button" id="login-submit" value="Create your profile">
-                    <span id="login-text"><span class="profile-submit-tags">{</span>Welcome Back<span class="profile-submit-tags">}</span></span>
+                <button type="submit" class="login-button" id="login-submit" value="Create your profile">
+                    <span id="login-text">Click here to resume the chaos!</span>
                 </button>
             </div>
         </form>
